tests/ui/associated-types/issue-85103-layout-debug.stderr
error[E0277]: the trait bound `[E]: ToOwned` is not satisfied
  --> $DIR/issue-85103-layout-debug.rs:6:21
   |
LL | type Edges<'a, E> = Cow<'a, [E]>;
   |                     ^^^^^^^^^^^^ the trait `ToOwned` is not implemented for `[E]`
   |
note: required by a bound in `Cow`
  --> $SRC_DIR/alloc/src/borrow.rs:LL:COL
help: consider introducing a `where` clause, but there might be an alternative better way to express this requirement
   |
LL | type Edges<'a, E> where [E]: ToOwned = Cow<'a, [E]>;
   |                   ++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
